<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MTweaks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_backup">Backup Profile</string>
    <string name="menu_restore">Restore Profile</string>
    <string name="menu_profiles">Profiles</string>
    <string name="prof_default">Default</string>
    <string name="prof_performance">High Performance</string>
    <string name="prof_battery">Battery saving</string>
    <string name="input_title">Enter new profile name.\n\nShort names are recommended.\n</string>
    <string name="input_box">Enter text here&#8230;</string>
    <string name="title_activity_main">MTweaks</string>
    <string name="bottom_accept">Apply</string>
    <string name="bottom_decline">Discard</string>
    <string name="startmenu_initial">Loading&#8230;</string>
    <string name="startmenu_nokernelsupport">Sorry, no kernel support!</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="flash_kernel">Flash Kernel</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="btn_reset_settings">Reset settings to default</string>
    <string name="developer_info">Original development STweaks of Gokhan Moral</string>
    <string name="developer_info2">Modified by morogoku</string>
    <string name="startmenu_no_root">No root access, or timeout!</string>
    <string name="loading">Loading! Please wait&#8230;</string>
    <string name="btn_kernel_web">MoRoKernel Web</string>
    <string name="web">www.esp-desarrolladores.com</string>
    <string name="btn1">-</string>
    <string name="btn2">+</string>
    <string name="kernel_ver_t">"Kernel Version: "</string>
    <string name="asv_t">"ASV level: "</string>
    <string name="modelo_t">"Model: "</string>
    <string name="rom_name_t">"ROM Name: "</string>
    <string name="rom_t">"ROM Version: "</string>
    <string name="modem_t">"Radio Version: "</string>
    <string name="boot_t">"Bootloader: "</string>
    <string name="android_t">"Android Version: "</string>
    <string name="hwserial_t">"Hardware Serial: "</string>
    <string name="btn_ok">"OK"</string>
    <string name="btn_cancel">"Cancel"</string>
    <string name="btn_yes">"YES"</string>
    <string name="btn_no">"NO"</string>
    <string name="warning_title">"¡¡ WARNING !!"</string>
    <string name="title_activity_list_profiles">Profile List</string>
    <string name="profile_warning">You have selected %1$s profile to restore, if you continue you will lose the current settings.\n\nAre you sure?</string>
    <string name="profile_create_ok">Profile created successfully !!\n\nLoading new profile....</string>
    <string name="delete_warning">The profile %1$s will be deleted.\n\nAre you sure?</string>
    <string name="delete_toast">Perfil %1$s eliminado con éxito</string>
    <string name="rename_title">Enter the new profile name.\n</string>
    <string name="rename_active_profile">It renamed the active profile.\n\nLoading the new profile %1$s as active&#8230;</string>
	<string name="rename_profile">%1$s profile renamed successfully</string>
    <string name="no_modify_battery">The Battery profile can not be changed</string>
    <string name="no_modify_performance">The Performance profile can not be changed</string>
    <string name="no_modify_default">The Default profile can not be changed</string>
    <string name="reset_settings">All settings will be reset.\nYou will have to relaunch the application.</string>
</resources>